# io-pipe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: io_pipe.rs
src/: async_pipe.rs  lib.rs  state.rs  sync_pipe.rs
src/state/: mod.rs  parking_lot_state.rs  std_state.rs
