[package]
name = "io-pipe"
description = "This library add a thread safe way to create multi writers and single reader pipeline."
authors = ["Mnwa <nikhail@panfilov.tech>"]
version = "0.1.2"
edition = "2021"
categories = ["algorithms", "data-structures", "concurrency"]
license = "MIT"
repository = "https://github.com/Mnwa/io-pipe"
documentation = "https://docs.rs/io-pipe/latest/io_pipe/"

[[bench]]
name = "io_pipe"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.5"
