[package]
name = "io-pipe"
description = "Dependency free and thread safe way to create multi writers and single reader pipeline."
authors = ["Mnwa <nikhail@panfilov.tech>"]
version = "0.3.2"
edition = "2021"
categories = ["algorithms", "data-structures", "concurrency"]
license = "MIT"
repository = "https://github.com/Mnwa/io-pipe"
documentation = "https://docs.rs/io-pipe/latest/io_pipe/"

[[bench]]
name = "io_pipe"
harness = false

[features]
default = ["sync"]
sync = []
async = ["futures"]

[dependencies]


[dependencies.futures]
version = "0.3"
optional = true

[dev-dependencies]
criterion = "0.5"
futures-executor = "0.3"
