[package]
name = "io-pipe"
version = "0.4.0"
authors = ["Mnwa <mikhail@panfilov.tech>"]
edition = "2021"
description = "A thread-safe library for creating multi-writer and single-reader pipelines in Rust."
repository = "https://github.com/Mnwa/io-pipe"
documentation = "https://docs.rs/io-pipe/latest/io_pipe/"
readme = "README.md"
license = "MIT"
keywords = ["io", "pipe", "multi-writer", "single-reader", "thread-safe"]
categories = ["algorithms", "data-structures", "concurrency", "asynchronous"]

[features]
default = ["sync"]
sync = []
async = ["dep:futures"]

[dependencies]
futures = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
futures-executor = "0.3"

[[bench]]
name = "io_pipe"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]